# VES

./: .gitattributes  BRANCHING_GUIDELINES.md  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PR_GUIDELINES.md  README.md  REPO_SYNCING.md  SECURITY.md
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  config.yaml  documentation_request.md  feature_request.md  roadmap_module.md
.github/workflows/: cla.yml  codecov.yml  deploy_ves.yml  greetings.yml  label.yml  rust-clippy.yml  stale.yml
components/core-agent/: Cargo.toml  build.rs
components/core-agent/ADR/Tailer/: 0001x-async-read-wrapper.md  000x-payload-channel.md
components/core-agent/ADR/Watcher/: 000x-checkpoint-store.md
components/core-agent/src/: main.rs
components/core-agent/src/buffer_batcher/: log_buffer_batcher.rs  mod.rs
components/core-agent/src/cli/: cli.rs
components/core-agent/src/config/: log_collector.toml
components/core-agent/src/helpers/: converters.rs  load_config.rs  log_processing.rs  mod.rs  shutdown.rs
components/core-agent/src/metrics/: http.rs  metrics.rs
components/core-agent/src/proto/: collector.rs  common.rs  mod.rs
components/core-agent/src/runtime/: runtime.rs
components/core-agent/src/shipper/: mod.rs  shipper.rs
components/core-agent/src/tailer/: async_read.rs  manager.rs  mod.rs  models.rs  payload.rs  reader.rs  tailer.rs  tailer_events.rs
components/core-agent/src/watcher/: discovery.rs  events.rs  mod.rs  models.rs  state.rs  watcher.rs
docker/chromadb/: docker-compose.yaml  otel-collector-config.yaml
docs/: docs.json  docusaurus.config.ts
docs/essentials/: code.mdx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
k8s/chromadb-service/chromadb/: deployment.yaml  service.yaml
k8s/chromadb-service/chromadb/storage/: pv-claim.yaml  pv-volume.yaml
k8s/chromadb-service/otel-collector/: deployment.yaml  otel-collector-config.yaml  service.yaml
k8s/chromadb-service/zipkin/: deployment.yaml  service.yaml
observability/: docker-compose.yml
observability/grafana/dashboards/: ves_logcollector_performance_dashboard.json
observability/prometheus/: alerts.yml  prometheus.yml
proto/: collector.proto  common.proto  embedder.proto
proto_files/: collector.proto  common.proto
scripts/: deploy_and_restart_ves.sh  generate_test_logs.sh
services/chromadb/: Cargo.toml
services/log-collector/: BUSINESS.md  Cargo.toml  DEMO_TODO_LIST.md  DIAGRAM.md  FINANCIALS.md  MVP.md  PERFORMANCE.md  README.md  build.rs
services/log-collector/src/: main.rs  v0.1.0_IMPROVMENTS.md
services/log-collector/src/buffer_batcher/: log_buffer_batcher.rs  mod.rs
services/log-collector/src/cli/: cli.rs
services/log-collector/src/config/: log_collector.toml
services/log-collector/src/helpers/: load_config.rs  log_processing.rs  mod.rs  shutdown.rs
services/log-collector/src/instrumentation/: tracing.rs
services/log-collector/src/metadata_enricher/: metadata.rs
services/log-collector/src/metrics/: http.rs  metrics.rs
services/log-collector/src/parser/: parser.rs
services/log-collector/src/proto/: collector.rs  common.rs  embedder.rs  mod.rs
services/log-collector/src/runtime/: runtime.rs
services/log-collector/src/server/: server.rs
services/log-collector/src/shipper/: shipper.rs
services/log-collector/src/tailer/: tailer.rs
services/log-collector/src/watcher/: watcher.rs
services/proto-defs/: Cargo.toml  build.rs
services/proto-defs/proto/: collector_embedder.proto
website/: package-lock.json
