[workspace]
members = [
    "components/core-agent",
]

[workspace.dependencies]
anyhow = "1.0.99"
serde = "1.0.219"
serde_json = "1.0.143"
toml = "0.9.5"
regex = "1.11.2"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "time", "registry", "json"] }
tracing-appender = "0.2"
tracing-error = "0.2.1"
console-subscriber = "0.5.0"
tokio-stream = "0.1.17"
notify = { version = "8.1.0", features = ["serde"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "0.14.2"
rand = "0.9.2"
thiserror = "2.0.17"
config = { version = "0.15.18", features = ["toml"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
prometheus = "0.14.0"
lazy_static = "1.5.0"
clap = { version = "4.5.51", features = ["derive"] }
bytes = "1"
futures = "0.3"
prost-types = "0.14.1"
hdrhistogram = "7"
sysinfo = "0.37.2"
walkdir = "2.5.0"
async_stream = "0.3.6"
