[workspace]
members = [
    "components/core-agent",
]
resolver = "2"

[workspace.package]
authors = ["Dennis Njuguna <dennis.njuguna@heimdelllabs.cloud>"]
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0"
license-file = "LICENSE.md"
repository = "https://github.com/H3IMD3LL-Labs-Inc/VES"
homepage = "https://ves.heimdelllabs.cloud"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "deny"
dead_code = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
missing_debug_implementations = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
enum_glob_use = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
large_futures = "warn"
must_use_candidate = "warn"

[workspace.dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
regex = "1.11.2"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "time", "registry", "json"] }
tracing-appender = "0.2"
tracing-error = "0.2.1"
console-subscriber = "0.5.0"
tokio-stream = "0.1.17"
notify = { version = "8.1.0", features = ["serde"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "0.14.2"
rand = "0.9.2"
thiserror = "2.0.17"
config = { version = "0.15.18", features = ["toml"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
prometheus = "0.14.0"
lazy_static = "1.5.0"
clap = { version = "4.5.51", features = ["derive"] }
bytes = "1"
futures = "0.3"
prost-types = "0.14.1"
hdrhistogram = "7"
sysinfo = "0.37.2"
walkdir = "2.5.0"
async-stream = "0.3.6"
pin-project = "1"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 16
debug = false
strip = "none"
debug-assertions = false
panic = "abort"
overflow-checks = false
incremental = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[profile.bench]
inherits = "release"
debug = true
