[package]
name = "core_agent"
version = "1.0.0-unstable"
description = "The VES platform's Core Agent component"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
autobenches = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
console-subscriber.workspace = true
tokio-stream.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono.workspace = true
toml.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
rand.workspace = true
thiserror.workspace = true
config.workspace = true
hyper.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
clap.workspace = true
bytes.workspace = true
futures.workspace = true
prost-types.workspace = true
hdrhistogram.workspace = true
sysinfo.workspace = true
walkdir.workspace = true
async-stream.workspace = true
pin-project.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "stable", "default"] }

[[bench]]
name = "core_agent_benchmark"
harness = false
