[package]
name = "log-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono.workspace = true
toml.workspace = true
rusqlite.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
