[package]
name = "log-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono.workspace = true
toml.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
rand.workspace = true
thiserror.workspace = true
config.workspace = true
hyper.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
clap.workspace = true
bytes.workspace = true
futures.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3               # maximize optimization for speed
lto = true                  # link-time optimization
codegen-units = 1           # enable more optimization opportunities
debug = false
panic = "abort"
overflow-checks = false
